--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+.Middle{
+	width:100%;
+border:1px solid black;
+}
+#t11{
+	border:1px solid black;
+	text-align:left;
+}
+#t12{
+	border:1px solid black;
+	text-align:center;
+}
+#t13{
+	border:1px solid black;
+	text-align:right;
+}
