--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,36 @@
-/*  your css code here. If applicable */
-.Middle{
-	width:100%;
-border:1px solid black;
+.middle{
+	border: 1px solid black;
+	border-spacing: 1px;
+	margin: auto;
+	width: 96%;
 }
-#t11{
-	border:1px solid black;
-	text-align:left;
+#table-1{
+	border-collapse: collapse;
 }
-#t12{
-	border:1px solid black;
-	text-align:center;
+ 
+.center{
+	text-align: center;
 }
-#t13{
-	border:1px solid black;
-	text-align:right;
+ 
+.right{
+	text-align: right;
+}
+ 
+.green{
+	background-color: green;
+}
+ 
+.blue{
+	background-color: blue;
+}
+ 
+#t-image{
+	text-align: center;
+}
+ 
+/*  General css  */
+td{
+	padding: 1px;
+	border: 1px solid black;
+	height: 20px;
 }
